--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,88 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Quicksand";
+  color: white;
+  background-color: #2e3440;
+}
+.navbar {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  border-bottom: 1px solid #4c566a;
+}
+.navbar h1 {
+  color: #a3be8c;
+}
+.navbar .links {
+  margin-left: auto;
+}
+.navbar a {
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+}
+.navbar a:hover {
+  color: #a3be8c;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.content {
+  margin: 40px auto;
+  padding: 20px;
+}
+
+.home img {
+    margin: center;
+    margin-bottom: 50px;
+    margin-top: 100px;
+}
+.home a {
+    text-decoration: none;
+    margin-bottom: 100px;
+    color: "white";
+    background-color: #a3be8c;
+    border-radius: 8px;
+    padding: 6px;
+    font-size: 20px;
+}
+button {
+    text-decoration: none;
+    color: "white";
+    background-color: #a3be8c;
+    border-radius: 8px;
+    padding: 6px;
+    font-size: 20px;
+    display: flex;
+    margin-left: auto;
+}
+img {
+    max-width: 50%;
+    max-height: 50%;
+    height: auto;
+    width: auto;
+}
+.early-modern {
+    margin-bottom: 100px;
+}
+
+/* blog previews / list */
+.comment-preview {
+  padding: 10px 16px;
+  border-bottom: 1px solid #4c566a;
+  margin: auto;
+  max-width: 800px;
+
+
+}
+.comment-preview:hover {
+  box-shadow: 1px 3px 5px rgba(255,255,255,0.1);
+}
+.comment-preview h2 {
+  font-size: 20px;
+  color: #a3be8c;
+  margin-bottom: 8px;
 }
